Fixed spacing issues after database changes.

--- a/src/components/student/stud.css
+++ b/src/components/student/stud.css
@@ -7,13 +7,13 @@
 }
 
 #subm {
- padding-left: 28%;
+ padding-left: 12%;
 }
 
 #stat {
- padding-left: 15%;
+ padding-left: 26%;
 }
 
 #subd {
- padding-left: 10%;
+ padding-left: 7%;
 }
