--- a/src/components/student/sub.css
+++ b/src/components/student/sub.css
@@ -12,7 +12,7 @@
 .forms {
     position: absolute;
     padding-top: 1%;
-    left: 30%;
+    left: 23%;
     width: 29%;
     height: 3.4%;
 }
@@ -39,6 +39,9 @@
 }
 
 .assignStatus {
-    padding-left: 68%;
+    padding-left: 63%;
 }
 
+.assignDate {
+    padding-right: 7%;
+}
